# RIXL

./: .gitignore  README.md  README_rocm.md  meson.build  meson_options.txt  pyproject.toml
.github/: CODEOWNERS  README.md
benchmark/nixlbench/: meson.build  meson_options.txt
benchmark/nixlbench/src/runtime/etcd/: python_bindings.cpp
benchmark/nixlbench/src/utils/: meson.build  utils.h
benchmark/nixlbench/src/worker/nixl/: meson.build  nixl_worker.cpp
contrib/: build-wheel.sh
docs/: python_api.md
examples/python/: expanded_two_peers.py
src/api/python/: _api.py
src/bindings/python/: nixl_bindings.cpp
src/bindings/python/nixl-meta/nixl/: __init__.py
src/plugins/: meson.build
src/plugins/libfabric/: libfabric_backend.cpp  libfabric_backend.h  meson.build
src/plugins/ucx/: meson.build  ucx_backend.cpp  ucx_backend.h
src/utils/libfabric/: libfabric_common.cpp  libfabric_rail.cpp  libfabric_rail_manager.cpp  libfabric_rail_manager.h  libfabric_topology.cpp  libfabric_topology.h  meson.build
test/gtest/: common.h  main.cpp  meson.build  test_transfer.cpp
test/python/: test_nixl_api.py  test_nixl_bindings.py
test/unit/plugins/: meson.build
test/unit/plugins/gds_mt/: meson.build  nixl_gds_mt_test.cpp
test/unit/plugins/ucx/: meson.build  ucx_backend_test.cpp  ucx_worker_test.cpp
test/unit/utils/libfabric/: libfabric_topology_test.cpp  meson.build
test/unit/utils/libfabric/topo/: mi300x-topo.xml
test/unit/utils/ucx/: meson.build
